--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </svg>
         </div>
           <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>Завдання організації, особливо рамки і місце н3авчання кадрів тягне у себе.</p>
+          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
           <div>
@@ -84,7 +84,7 @@
           <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li>
-          <div id="div">
+          <div>
           <svg>
             <use href="./images/icons.svg#astronaut"></use>
           </svg>
@@ -125,28 +125,28 @@
     <ul class="list-icons">
       <li>
     <a href="#instagram">
-      <svg>
+      <svg width="44px" height="44px">
         <use class href="./images/icons.svg#instagram"></use>
       </svg>
     </a>
   </li>
   <li>
     <a href="#twitter">
-      <svg>
+      <svg width="44px" height="44px">
         <use href="./images/icons.svg#twitter"></use>
       </svg>
     </a>
     </li>
     <li>
     <a href="#facebook">
-      <svg>
+      <svg width="44px" height="44px">
         <use href="./images/icons.svg#facebook"></use>
       </svg>
     </a>
   </li>
   <li>
     <a href="#linkedin">
-      <svg>
+      <svg width="44px" height="44px">
         <use href="./images/icons.svg#linkedin"></use>
       </svg>
     </a>
@@ -162,28 +162,28 @@
       <ul class="list-icons">
         <li>
       <a href="#instagram">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#twitter">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
       <a href="#facebook">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#linkedin">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
@@ -199,28 +199,28 @@
       <ul class="list-icons">
         <li>
       <a href="#instagram">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#twitter">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
       <a href="#facebook">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#linkedin">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
@@ -236,28 +236,28 @@
       <ul class="list-icons">
         <li>
       <a href="#instagram">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#twitter">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
       <a href="#facebook">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#linkedin">
-        <svg>
+        <svg width="44px" height="44px">
           <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
@@ -272,44 +272,44 @@
   <section class="section clients">
   <div class="container">
 <h2>Постійні клієнти</h2>
-<ul>
-  <li>
-    <a href="">
+<ul class="clients-ul">
+  <li class="clients-li">
+    <a href="" class="clients-link">
     <svg>
     <use href="./images/icons.svg#yaco"></use>
   </svg>
   </a>
 </li>
-  <li>
-    <a href="">
+  <li class="clients-li">
+    <a href="" class="clients-link">
     <svg>
     <use href="./images/icons.svg#company"></use>
   </svg>
   </a>
 </li>
-  <li>
-    <a href="">
+  <li class="clients-li">
+    <a href="" class="clients-link">
     <svg>
     <use href="./images/icons.svg#company-1"></use>
   </svg>
   </a>
 </li>
-  <li>
-    <a href="">
+  <li class="clients-li">
+    <a href="" class="clients-link">
     <svg>
     <use href="./images/icons.svg#foster"></use>
   </svg>
   </a>
 </li>
-  <li>
-    <a href="">
+  <li class="clients-li">
+    <a href="" class="clients-link">
     <svg>
     <use href="./images/icons.svg#brand"></use>
   </svg>
   </a>
 </li>
-  <li>
-    <a href="">
+  <li class="clients-li">
+    <a href="" class="clients-link">
     <svg>
     <use href="./images/icons.svg#company-2"></use>
   </svg>
