--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 <section class="command section">
   <div class="container">
   <h2 class="title">Наша команда</h2>
-  <ul>
-      <li>
+  <ul class="command-ul">
+      <li class="command-li">
       <img src="images/img_4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-      <div>
+      <div class="command-div">
       <h3>Ігор Дем'яненко</h3>
     <p>Product Designer</p>
     <ul class="list-icons">
@@ -154,9 +154,9 @@
   </ul>
     </div>
   </li>
-      <li>
+      <li class="command-li">
       <img src="images/img_5.jpg" alt="Ольга Рєпіна" width="270" height="260">
-      <div>
+      <div class="command-div">
       <h3>Ольга Рєпіна</h3>
       <p>Frontend Developer</p>
       <ul class="list-icons">
@@ -191,9 +191,9 @@
     </ul>
       </div>
       </li>
-    <li>
+    <li class="command-li">
       <img src="images/img_6.jpg" alt="Микола Тарасов" width="270" height="260">
-      <div>
+      <div class="command-div">
       <h3>Микола Тарасов</h3>
       <p>Marketing</p>
       <ul class="list-icons">
@@ -228,9 +228,9 @@
     </ul>
       </div>
       </li>
-    <li>
+    <li class="command-li">
         <img src="images/img_7.jpg" alt="Михайло Єрмаков" width="270" height="260">
-        <div>
+        <div class="command-div">
         <h3>Михайло Єрмаков</h3>
       <p>UI Designer</p>
       <ul class="list-icons">
@@ -340,28 +340,28 @@
   <ul class="list-icons">
     <li>
   <a href="#instagram">
-    <svg>
+    <svg width="44px" height="44px">
       <use href="./images/icons.svg#instagram"></use>
     </svg>
   </a>
 </li>
 <li>
   <a href="#twitter">
-    <svg>
+    <svg width="44px" height="44px">
       <use href="./images/icons.svg#twitter"></use>
     </svg>
   </a>
   </li>
   <li>
   <a href="#facebook">
-    <svg>
+    <svg width="44px" height="44px">
       <use href="./images/icons.svg#facebook"></use>
     </svg>
   </a>
 </li>
 <li>
   <a href="#linkedin">
-    <svg>
+    <svg width="44px" height="44px">
       <use href="./images/icons.svg#linkedin"></use>
     </svg>
   </a>
